--- a/templates/active.html
+++ b/templates/active.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>WashSmart - Active</title>
-    <link rel="stylesheet" href="/static/style.css">
-</head>
-<body>
-    <div class="container">
-        <h2>Subscription Active</h2>
-        <p>Phone: {{ phone }}</p>
-        <a href="/turn_on/{{ phone }}" class="button">Turn On</a>
-    </div>
-</body>
-</html>
+<p>Welcome! Your subscription is active.</p>
+<form method="POST" action="/turn_on">
+  <input type="hidden" name="phone" value="{{ phone }}">
+  <button type="submit">Turn On</button>
+</form>
