--- a/templates/in_use.html
+++ b/templates/in_use.html
@@ -1,13 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>In Use</title>
-    <link rel="stylesheet" href="/static/style.css">
-</head>
-<body>
-    <div class="container">
-        <h2>Machine Already in Use</h2>
-        <p>Please wait {{ remaining // 60 }} mins {{ remaining % 60 }} secs.</p>
-    </div>
-</body>
-</html>
+<p>Machine is currently in use.</p>
+<p>Please wait {{ minutes }} minutes.</p>
