--- a/templates/index.html
+++ b/templates/index.html
@@ -25,22 +25,16 @@
       max-width: 400px;
       width: 100%;
     }
-    input {
+    input, button {
       padding: 10px;
-      width: 80%;
       border-radius: 5px;
       border: none;
-      margin-bottom: 20px;
+      margin: 10px;
     }
     button {
-      padding: 10px 20px;
-      margin: 10px;
-      border: none;
-      border-radius: 5px;
       background: #fff;
       color: #333;
       cursor: pointer;
-      transition: 0.3s ease;
     }
     button:hover {
       background: #ddd;
