--- a/templates/index.html
+++ b/templates/index.html
@@ -92,8 +92,8 @@
 </head>
 <body>
   <div id="container">
-    <img src="https://cdn-icons-png.flaticon.com/512/1046/1046784.png" alt="Washing Machine Logo" class="logo">
-    <h2>WashSmart</h2>
+    <img src="https://cdn-icons-png.flaticon.com/512/3322/3322056.png" alt="Washing Machine Logo" class="logo">
+    <h2>Tycoon2.0 WashSmart</h2>
     <input type="text" id="phone" placeholder="Enter phone number" />
     <button onclick="check()">Check</button>
     <div class="loader" id="loader"></div>
