--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-Add this points to my webpage with the provided links . It should be presented at the bottom of webpage in very small fronts.
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -164,6 +164,13 @@ Add this points to my webpage with the provided links . It should be presented a
   }
   </script>
   <button onclick="forceTurnOff()" style="margin-top: 10px; font-size: 12px; padding: 6px 10px;">Turn Off</button>
+    <div class="footer">
+    <a href="https://merchant.razorpay.com/policy/QlcVypBYykpeic/terms" target="_blank">Terms and Conditions</a>
+    <a href="https://merchant.razorpay.com/policy/QlcVypBYykpeic/privacy" target="_blank">Privacy Policy</a>
+    <a href="https://merchant.razorpay.com/policy/QlcVypBYykpeic/refund" target="_blank">Cancellations and Refunds</a>
+    <a href="https://merchant.razorpay.com/policy/QlcVypBYykpeic/shipping" target="_blank">Shipping Policy</a>
+    <a href="https://merchant.razorpay.com/policy/QlcVypBYykpeic/contact_us" target="_blank">Contact Us</a>
+  </div>
 
 </body>
 </html>
