--- a/templates/index.html
+++ b/templates/index.html
@@ -167,10 +167,10 @@
    <div class="footer">
     <footer style="background-color: #f8f9fa; padding: 20px; text-align: center;">
   <p>
-    <a href="templates/contact.html">Contact Us</a> |
-    <a href="templates/terms.html">Terms and Conditions</a> |
-    <a href="templates/refund.html">Cancellations and Refunds</a> |
-    <a href="templates/privacy.html">Privacy Policy</a>
+    <a href="contact.html">Contact Us</a> |
+    <a href="terms.html">Terms and Conditions</a> |
+    <a href="refund.html">Cancellations and Refunds</a> |
+    <a href="privacy.html">Privacy Policy</a>
   </p>
   <p>&copy; 2025 Your Company Name. All rights reserved.</p>
 </footer>
